--- a/data.html
+++ b/data.html
@@ -125,7 +125,7 @@
         </form>
 
         <!-- Footer -->
-        <p class="footer">Powered by <a href="https://perusahaananda.com" target="_blank">Perusahaan Anda</a></p>
+        <p class="footer">Powered by <a href="https://www.jaringanlintasartha.com/" target="_blank">PT Jaringan Lintas Artha</a></p>
     </div>
 
     <script>
