--- a/promosi.html
+++ b/promosi.html
@@ -33,13 +33,13 @@
 
         header h1 {
             margin: 0;
-            font-size: 1.8rem;
+            font-size: 1rem;
             display: flex;
             align-items: center;
         }
 
         header h1 img {
-            height: 80px;
+            height: 60px;
             margin-right: 1rem;
         }
 
@@ -50,6 +50,7 @@
 
         nav a {
             color: white;
+            font-size: 10px;
             text-decoration: none;
             font-weight: bold;
             transition: color 0.3s;
@@ -67,7 +68,7 @@
         }
 
         .hero h2 {
-            font-size: 3rem;
+            font-size: 2rem;
             margin-bottom: 1rem;
         }
 
@@ -174,7 +175,6 @@
     <header>
         <h1>
             <img src="logo.png" alt="Logo Perusahaan">
-            Layanan WiFi
         </h1>
         <nav>
             <a href="#features">Fitur</a>
